--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typegen": " sanity schema extract --path=src/sanity/extract.json && sanity typegen generate "
   },
   "dependencies": {
+    "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.65.0",
     "next": "^15.0.3",
-    "next-sanity": "^9.8.16",
+    "next-sanity": "^9.8.18",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "sanity": "^3.65.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
