--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "typegen": " sanity schema extract --path=src/sanity/extract.json && sanity typegen generate "
   },
   "dependencies": {
+    "@sanity/client": "^6.22.5",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.65.0",
     "next": "^15.0.3",
-    "next-sanity": "^9.8.18",
+    "next-sanity": "^9.8.19",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "sanity": "^3.65.0",
