--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-sanity": "^9.8.19",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-spinners": "^0.15.0",
     "sanity": "^3.65.0",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.15"
