--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@sanity/client": "^6.22.5",
+    "@sanity/desk-tool": "^2.36.2",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/orderable-document-list": "^1.2.3",
     "@sanity/vision": "^3.65.0",
     "next": "^15.0.3",
     "next-sanity": "^9.8.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-spinners": "^0.15.0",
     "sanity": "^3.65.0",
     "styled-components": "^6.1.13",
