--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@sanity/vision": "^3.65.0",
     "next": "^15.0.3",
     "next-sanity": "^9.8.19",
+    "next-seo": "^6.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
