--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@portabletext/types": "^2.0.13",
     "@sanity/client": "^6.22.5",
     "@sanity/desk-tool": "^2.36.2",
     "@sanity/icons": "^3.4.0",
