--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "postbuild": "next-sitemap",
-    "start": "next start",
+    "start": "next start -p 3004",
     "lint": "next lint",
     "typegen": " sanity schema extract --path=src/sanity/extract.json && sanity typegen generate "
   },
